--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile-sass": "node-sass sass/main.scss css/style.css --watch"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "node-sass": "^8.0.0"
+  },
+  "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "nodemailer": "^6.8.0"
   }
 }
